--- a/src/index.css
+++ b/src/index.css
@@ -3966,6 +3966,15 @@ input[type=button].btn-block {
   line-height: inherit;
   white-space: nowrap;
 }
+.navbar-brand-logo {
+  display: inline;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
 }
